# ClawdORE

./: .gitignore  AUDIT_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPROVEMENTS.md  QUICK_REFERENCE.md  RAILWAY.md  RAILWAY_SIMULATION.md  README.md  SIMULATION_GUIDE.md  SIMULATION_QUICKSTART.md  TESTING.md  deploy-simulation.sh  docker-compose.yml  nixpacks.toml  railway.json  setup-codespaces.sh
.github/workflows/: run-bots.yml
clawdbot/: .gitignore  API.md  ARCHITECTURE.md  COMPARISON.md  COMPLETE.md  Cargo.toml  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  README.md  config.example.json  nixpacks.toml  railway.yaml  run.sh
clawdbot-api/: .env.example  Cargo.toml  README.md
clawdbot-api/src/: main.rs
clawdbot-web/: Cargo.toml  README.md
clawdbot-web/src/: bot_manager.rs  main.rs
clawdbot-web/static/: index.html
clawdbot/src/: ai_advisor.rs  analytics.rs  blockchain_parser.rs  bot.rs  client.rs  config.rs  db.rs  error.rs  learning_engine.rs  lib.rs  monitor.rs  ore_round.rs  ore_stats.rs  ore_strategy.rs  simulation.rs  strategies.rs  strategy.rs  utils.rs
frontend/: .gitignore  README.md  check-bets.js  check-bets2.js  check-db.js  check-state.js  check-wins.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/ore/: route.ts
frontend/app/api/ore/history/: route.ts
frontend/app/api/ore/live/: route.ts
frontend/app/api/ore/protocol/: route.ts
frontend/app/api/ore/squares/: route.ts
frontend/app/api/results/: route.ts
frontend/app/api/signals/: route.ts
frontend/app/api/state/: route.ts
frontend/app/api/stats/: route.ts
frontend/app/api/test-20/: route.ts
frontend/app/api/wallet/: route.ts
frontend/app/components/: BoardGrid.tsx  BotCard.tsx  RoundTimer.tsx  Stats.tsx  StrategyPanel.tsx  Terminal.tsx
frontend/app/ore-stats/: page.tsx
frontend/app/test-20/: page.tsx
frontend/public/: clawdore-userscript.js  ore-selector.html
ore-dashboard/: Cargo.toml  Dioxus.toml  README.md  index.html
ore-dashboard/assets/: main.css
ore-dashboard/src/: main.rs
