[package]
name = "clawdbot-web"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio = { version = "1", features = ["full"] }

# WebSocket support
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Process management
tokio-process = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Templates
askama = "0.12"
askama_axum = "0.4"

# UUID for session management
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = "0.4"
