[package]
name = "clawdbot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana dependencies
solana-sdk = "^2.1"
solana-client = "^2.1"
solana-program = "^2.1"
anchor-client = "0.30"
anchor-lang = "0.30"
spl-token = "^4"
spl-associated-token-account = "^2"

# ORE dependencies
ore-api = { path = "../ore/api" }
ore-mint-api = { path = "../ore-mint/api" }
entropy-api = { path = "../entropy/api" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI and logging
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
colored = "2.0"

# Utils
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
rand = "0.8"
bytemuck = "1.14"
backoff = { version = "0.4", features = ["tokio"] }
ctrlc = "3.4"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }

# Database (optional, for storing analytics)
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"], optional = true }

[features]
default = []
database = ["sqlx"]

[[bin]]
name = "miner-bot"
path = "src/bin/miner_bot.rs"

[[bin]]
name = "betting-bot"
path = "src/bin/betting_bot.rs"

[[bin]]
name = "analytics-bot"
path = "src/bin/analytics_bot.rs"

[[bin]]
name = "monitor-bot"
path = "src/bin/monitor_bot.rs"

[[bin]]
name = "simulation-bot"
path = "src/bin/simulation_bot.rs"
