[package]
name = "ore-dashboard"
version = "0.1.0"
edition = "2021"
description = "Professional ORE Mining Dashboard - Real-time Regolith Grid Visualization"

[dependencies]
dioxus = { version = "0.6", features = ["web", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "console"] }
chrono = { version = "0.4", features = ["wasmbind"] }
tracing = "0.1"

[features]
default = []
